--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,5 @@ InitTestScene*.unity*
 
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
+
+/Project Jump/Library/PackageCache/com.unity.burst@1.8.12/.Runtime/libburst-llvm-16.dylib
